fix(button): xs size having wrong padding

--- a/packages/components/button/src/styles/_variables.scss
+++ b/packages/components/button/src/styles/_variables.scss
@@ -124,6 +124,6 @@ $button-sizes: (
   xs: (
     padding-y: theme.get-spacing(0.15),
     padding-x: theme.get-spacing(1),
-    padding-icon: theme.get-spacing(105),
+    padding-icon: theme.get-spacing(0.5),
   ),
 );
